# Project-Manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
scr/: main.py
scr/core/: config.py
src/: .env.example  main.py  prestart.sh
src/api/: deps.py  router.py
src/api/v1/: router.py
src/api/v1/endpoints/: auth.py  (+2 more)
src/common/: dto.py  schemas.py
src/core/: config.py
src/core/security/: jwt_handler.py  password.py  permissions.py
src/db/: mixins.py  session.py
src/db/migrations/: env.py
src/enums/: project.py  project_task.py  task.py  token.py
src/modules/auth/: schemas.py  service.py
src/modules/personal_tasks/: dto.py  model.py  repository.py  schemas.py  service.py
src/modules/project_members/: dto.py  model.py  repository.py  schemas.py  service.py
src/modules/project_tasks/: dto.py  model.py  repository.py  schemas.py  service.py
src/modules/projects/: dto.py  model.py  repository.py  schemas.py  service.py
src/modules/users/: model.py  repository.py  schemas.py  service.py
src/utils/: datetime.py  model_loader.py
tests/: conftest.py  factories.py
tests/api/auth/: test_login.py  test_refresh.py  test_register.py
tests/api/users/: test_uses_me.py
tests/factories/: models.py  schemas.py
tests/fixtures/: auth.py  client.py  database.py  project_tasks.py  projects.py  users.py
tests/integrations/repositories/: test_personal_task_repository.py  test_project_members_repository.py  test_project_repository.py  test_project_tasks_repository.py  test_users_repository.py
tests/modules/auth/: test_auth_service.py
tests/modules/users/: test_users_repository.py  test_users_service.py
tests/security/: test_jwt_handler.py  test_password_hasher.py
tests/unit/security/: test_jwt_handler.py  test_password_hasher.py  test_permission_checker.py
tests/unit/services/: test_auth_service.py  test_personal_tasks_service.py  test_project_members_service.py  test_project_service.py  test_project_tasks_service.py  test_users_service.py
(+51 files in other folders)
