[project]
name = "project-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.120.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[aiosqlite]>=2.0.44",
    "uvicorn>=0.38.0",
]
